--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Commit E</p>
     <h2>Commit A</h2>
     <h3>Commit B</h3>
+    <p>Move commit from moveCommit branch</p>
 </body>
 </html>
