move commit from branch moveCommit

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     <h1>Git Reset Commits sadasds</h1>
-    <p>Commit C</p>
-    <p>Commit D</p>
-    <p>Commit E</p>
-    <h2>Commit A</h2>
-    <h3>Commit B</h3>
+  
+    <p>Move commit from moveCommit branch</p>
 </body>
 </html>
