revert to comit 0d3140d4ff6c390778609b594989e1cb50531880

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Git Reset Commits sadasds</h1>
-  
-    <p>Move commit from moveCommit branch</p>
+    <p>Commit C</p>
+    <p>Commit D</p>
+    <p>Commit E</p>
 </body>
 </html>
