--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Git Reset Commits sadasds</h1>
-    <p>Commit C</p>
+    <p>Commit 1</p>
     <p>Commit D</p>
     <p>Commit E</p>
 </body>
