--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Git Reset Commits sadasds</h1>
     <p>Commit 1</p>
-    <p>Commit D</p>
+    <p>Commit 2</p>
     <p>Commit E</p>
 </body>
 </html>
