--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Git Reset Commits sadasds</h1>
     <p>Commit 1</p>
     <p>Commit 2</p>
-    <p>Commit E</p>
+    <p>Commit 3</p>
 </body>
 </html>
