--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git Merge</h1>
+    <h1>Git Rebase</h1>
     <p>Commit 1</p>
-    <p>Commit 3</p>
-    <p>Commit 5</p>
-    <p>Commit 2</p>
-    <p>Commit 4</p>
+    
 </body>
 </html>
