--- a/index.html
+++ b/index.html
@@ -30,12 +30,31 @@
     <!-- <script src="promise.js"></script> -->
     <!-- <script src="proto.js"></script> -->
 
-    <!-- Patterns   -->
+    <!--! Patterns   -->
+
+    <!--? Creational  -->
+    <!--! Патерни створення допомагають контролювати створення об’єктів -->
 
     <!-- <script src="./creationalsPattern/Singelton.js"></script> -->
     <!-- <script src="./creationalsPattern/Constructor.js"></script> -->
     <!-- <script src="./creationalsPattern/Prototype.js"></script> -->
-    <script src="./creationalsPattern/Factory.js"></script>
+    <!-- <script src="./creationalsPattern/Factory.js"></script> -->
+
+    <!--? Structural  -->
+     <!--! Структурні паттерни дозволяють інтегрувати додатковий функціонал до проекту не ламаючи даний -->
+
+    <!-- <script src="./2 structural/Decorator.js"></script> -->
+    <!-- <script src="./2 structural/Proxy.js"></script> -->
+    <!-- <script src="./2 structural/Adapter.js"></script> -->
+
+    <!--? Behevioral  -->
+    <!--! Моделі поведінки пов'язані з розподілом відповідальності між об'єктами 
+    <!--! або інкапсулюванням поведінки в об'єкті та делегуванням запитів до нього -->
+
+    <!-- <script src="./behevioral/Iterator.js"></script> -->
+    <!-- <script src="./behevioral/Visitor.js"></script> -->
+    <!-- <script src="./behevioral/Observer.js"></script> -->
+<script src="./behevioral/State.js"></script>
 
 
 </body>
