--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Git Rebase</h1>
-    <a id="eventPrDef" href="https://www.google.com/" target="_blank">Event Prevault Default</a>
-
-
-    <section id="section">SECTION
-        <div id="div">DIV
-            <p id = "p">P</p>
-        </div>
+    <a id="eventPrDef" href="https://www.google.com/" target="_blank"
+      >Event Prevault Default</a
+    >
+    <section id="section">
+      SECTION
+      <div id="div">
+        DIV
+        <p id="p">P</p>
+      </div>
     </section>
     <p>Commit 1</p>
     <p>Commit 2</p>
@@ -36,7 +38,5 @@
     <!-- <script src="./creationalsPattern/Constructor.js"></script> -->
     <!-- <script src="./creationalsPattern/Prototype.js"></script> -->
     <script src="./creationalsPattern/Factory.js"></script>
-
-
-</body>
+  </body>
 </html>
