--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>Commit 2</p>
     <p>Commit 4</p>
     <p>Commit 3</p>
-    <p>Commit 5</p>
+    <!-- <p>Commit 5</p> -->
     <div>
         <button onclick="runScript()">Run script</button>
         <script>
