--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>Commit 3</p>
     <!-- <p>Commit 5</p> -->
     <div>
-        <button onclick="runScript()">Run script</button>
+        <!-- <button onclick="runScript()">Run script</button>
         <script>
             function runScript() {
                 console.log("script","1");
@@ -54,7 +54,7 @@
             function consoleLog(){
                 console.log('Console log')
             }
-        </script>
+        </script> -->
 <!-- // 1
 // 7
 // 6
@@ -62,7 +62,7 @@
 // 4
 // 2
 // 5 -->
-        <button onclick="consoleLog()">Console log</button>
+        <!-- <button onclick="consoleLog()">Console log</button> -->
     </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script> -->
     <!-- <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script> -->
@@ -74,7 +74,10 @@
 
     <!-- <script src="function.js"></script> -->
     <!-- <script src="event.js"></script> -->
-    <script src="promise.js"></script> 
+    <!-- <script src="promise.js"></script>  -->
+    <!-- <script src="promiseChain.js"></script>  -->
+    <!-- <script src="promiseChain-2.js"></script> -->
+    <script src="train.js"></script
     <!-- <script src="proto.js"></script> -->
 
     <!--! Patterns   -->
