--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- <script src="./2 structural/Adapter.js"></script> -->
 
     <!--? Behevioral  -->
-    <!--! Моделі поведінки пов'язані з розподілом відповідальності між об'єктами 
+    <!--! Модел поведінки пов'язані з розподілом відповідальності між об'єктами 
     <!--! або інкапсулюванням поведінки в об'єкті та делегуванням запитів до нього -->
 
     <!-- <script src="./behevioral/Iterator.js"></script> -->
